<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal" />

        <!--  Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxStrokeWidth="0dp"
            android:layout_marginBottom="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@drawable/border_radius"
                android:hint="@string/label_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            app:boxStrokeWidth="0dp"
            android:layout_marginBottom="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/border_radius"
                android:hint="@string/lapel_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Sign up Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:textColor="@color/black"
            android:background="@drawable/border_radius"
            android:text="@string/sign_in"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/link_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lapel_create_account"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <TextView android:id="@+id/link_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lapel_forgot"
                android:gravity="end"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>